tests/errors/wrong_type_usage/wrong_type_function_call.meth
str func(int wire, str voltage) {
    print(voltage);
    print(wire > 20);
    return voltage;
}


int x = func(3, "high");